<resources>
    <string name="app_name">Breaking Bad Characters</string>

    <string name="label_name">Name:</string>
    <string name="label_occupation">Occupation</string>
    <string name="label_status">Status:</string>
    <string name="label_nickname">Nickname:</string>
    <string name="label_season_appearance">Season Appearance:</string>

    <string name="not_available">N/A</string>

</resources>