<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/spaceSmall"
        android:scaleType="matrix"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <GridLayout
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spaceRegular"
        android:columnCount="2"
        android:paddingStart="@dimen/spaceRegular"
        android:paddingEnd="@dimen/spaceRegular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/Description"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="0.5"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/name"
            style="@style/Description"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="0.5" />

        <TextView
            style="@style/Description"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="0.5"
            android:text="@string/label_occupation" />

        <TextView
            android:id="@+id/occupation"
            style="@style/Description"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="0.5" />

        <TextView
            style="@style/Description"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnWeight="0.5"
            android:text="@string/label_status" />

        <TextView
            android:id="@+id/status"
            style="@style/Description"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnWeight="0.5" />

        <TextView
            style="@style/Description"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnWeight="0.5"
            android:text="@string/label_nickname" />

        <TextView
            android:id="@+id/nickname"
            style="@style/Description"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnWeight="0.5" />

        <TextView
            style="@style/Description"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnWeight="0.5"
            android:text="@string/label_season_appearance" />

        <TextView
            android:id="@+id/seasonAppearance"
            style="@style/Description"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_columnWeight="0.5" />
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>